06-01 게시판 2차 수정

--- a/WebContent/Board/borad.html
+++ b/WebContent/Board/borad.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/JS/board.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="/css/board.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/board.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     <script src="https://use.fontawesome.com/afbd8941a0.js"></script>
 </head>
@@ -94,7 +95,7 @@
         </form>
     </div>
 </body>
-<script src="/js/board.js" type="text/javascript"></script>
+
 </html>
 
 
