--- a/WebContent/Board/comment.html
+++ b/WebContent/Board/comment.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="/css/comment.css" rel="stylesheet" type="text/css">
-    <link href="/css/cancel-modal.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/comment.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/cancel-modal.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     <script src="https://use.fontawesome.com/afbd8941a0.js"></script>
 </head>
 
-<script src="/js/cancel-modal.js" type="text/javascript"></script>
+<script src="/JS/cancel-modal.js" type="text/javascript"></script>
 <body>
 
 
