--- a/WebContent/Board/notice_content.html
+++ b/WebContent/Board/notice_content.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link href="/CSS/notice_content.css" rel="stylesheet" type="text/css">
+    <link href="../CSS/notice_content.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
