--- a/WebContent/Board/sign_up.html
+++ b/WebContent/Board/sign_up.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/JS/sign_up.js" type="text/javascript"></script>
-    <link href="/CSS/sign_up.css" rel="stylesheet" type="text/css">
+    <script src="../JS/sign_up.js" type="text/javascript"></script>
+    <link href="../CSS/sign_up.css" rel="stylesheet" type="text/css">
     <script src="https://use.fontawesome.com/afbd8941a0.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
 
