--- a/WebContent/User/FindEmail.html
+++ b/WebContent/User/FindEmail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/FindEmail.css">
+    <link rel="stylesheet" href="../CSS/FindEmail.css">
     <title>이메일찾기Modal</title>
 </head>
 <body>
