--- a/WebContent/User/maximLogin.html
+++ b/WebContent/User/maximLogin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="CSS/maximLogin.css" rel="stylesheet" type="text/css">
+    <link href="../CSS/maximLogin.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>시스아웃</title>
 </head>
