freePostView.html: 글 열람시 화면 + 댓글 notice.html: css 수정

--- a/WebContent/Board/notice.html
+++ b/WebContent/Board/notice.html
@@ -3,74 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../CSS/notice.css"  rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <title>Notice</title>
+
+    <link rel="stylesheet" href="../CSS/notice.css"/>
 </head>
 <body>
-    <h2>공지사항</h2>
+    <div class="header"><span>공지사항</span></div>
 
-    <div id="top_box">
-        <span style="background-color: #DEDEDE; padding: 0px 2%; ">NO</span>
-        <span style="background-color: #DEDEDE; padding: 0px 30%;">내용</span>
-        <span style="background-color: #DEDEDE; padding-left: 5%; text-align: right;">등록일</span>
-    </div>
-        
-    <div id="post">
-        <span style=" padding: 0px 2%; ">100</span>
-        <!-- 아래 a 태그에 글 내용 링크 넣기-->
-        <span><a href="notice_content.html">Lorem ipsum dolor sit amet</a></span>
-        <span style=" padding-left: 5%; text-align: right; float: right;">2020-05-29</span>
-
-    </div>
- 
-    <div id="post">
-        <span style=" padding: 0px 2%; ">100</span>
-        <!-- 아래 a 태그에 글 내용 링크 넣기-->
-        <span><a href="notice_content.html">Lorem ipsum dolor sit amet</a></span>
-        <span style=" padding-left: 5%; text-align: right; float: right;">2020-05-29</span>
-
-    </div>
- 
-    <div id="post">
-        <span style=" padding: 0px 2%; ">100</span>
-        <!-- 아래 a 태그에 글 내용 링크 넣기-->
-        <span><a href="notice_content.html">Lorem ipsum dolor sit amet</a></span>
-        <span style=" padding-left: 5%; text-align: right; float: right;">2020-05-29</span>
-
-    </div>
- 
-    <div id="post">
-        <span style=" padding: 0px 2%; ">100</span>
-        <!-- 아래 a 태그에 글 내용 링크 넣기-->
-        <span><a href="notice_content.html">Lorem ipsum dolor sit amet</a></span>
-        <span style=" padding-left: 5%; text-align: right; float: right;">2020-05-29</span>
-
-    </div>
- 
-    <div id="post">
-        <span style=" padding: 0px 2%; ">100</span>
-        <!-- 아래 a 태그에 글 내용 링크 넣기-->
-        <span><a href="notice_content.html">Lorem ipsum dolor sit amet</a></span>
-        <span style=" padding-left: 5%; text-align: right; float: right;">2020-05-29</span>
-
-    </div>
- 
-    <div id="post">
-        <span style=" padding: 0px 2%; ">100</span>
-        <!-- 아래 a 태그에 글 내용 링크 넣기-->
-        <span><a href="notice_content.html">Lorem ipsum dolor sit amet</a></span>
-        <span style=" padding-left: 5%; text-align: right; float: right;">2020-05-29</span>
-
-    </div>
- 
-    <div id="post">
-        <span style=" padding: 0px 2%; ">100</span>
-        <!-- 아래 a 태그에 글 내용 링크 넣기-->
-        <span><a href="notice_content.html">Lorem ipsum dolor sit amet</a></span>
-        <span style=" padding-left: 5%; text-align: right; float: right;">2020-05-29</span>
-
-    </div>
- 
-
+    <table>
+        <tr>
+            <th>No</th>
+            <th>제목</th>
+            <th>등록일</th>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td><a href="notice_content.html">Lorem ipsum dolor sit amet</a></td>
+            <td>2020-05-29</td>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td><a href="notice_content.html">Lorem ipsum dolor sit amet</a></td>
+            <td>2020-05-29</td>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td><a href="notice_content.html">Lorem ipsum dolor sit amet</td>
+            <td>2020-05-29</td>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td><a href="notice_content.html">Lorem ipsum dolor sit amet</td>
+            <td>2020-05-29</td>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td><a href="notice_content.html">Lorem ipsum dolor sit amet</td>
+            <td>2020-05-29</td>
+        </tr>
+    </table> 
 </body>
-</html>     
+</html>
