게시글 수정시 카테고리 변경 가능

--- a/WebContent/Board/borad.html
+++ b/WebContent/Board/borad.html
@@ -23,7 +23,13 @@
     <br>
 
     <div class="text">
-        <span id="text_uid">게시글 uid</span>
+    	<table>
+    		<tr>
+    			<td style="font-size:50pt">hihihi</td>
+    		</tr>>
+    	
+    	</table>
+        <span id="text_uid" style="font-size:50pt">게시글 uid</span>
         <br><br>
         <span><i class="fas fa-user-edit fa-5x"></i></span>
         <span style="display: inline-block;"><div id="text_title">게시글 제목</div><br><div id="nick_name">닉네임</div></span>
