게시판 수정

--- a/WebContent/Board/borad.html
+++ b/WebContent/Board/borad.html
@@ -18,7 +18,7 @@
         <button id="tag3" class="tags" >최신순</button>
         <!-- 아래에 글쓰기 링크 -->
         <a href="#"><i class="fas fa-pen fa-2x" id="pen"></i></a>
-    </div>
+    </div> 
 
     <br>
 
@@ -29,7 +29,7 @@
             <td id="text_title">게시글 제목</td>
         </tr>
         <tr>
-            <td id="nick_name">닉네임</td>
+            <td id="nick_name">닉네임ㅁ</td>
             <td style="font-size: 12px; font-weight: bold;">댓글 3 &nbsp;&nbsp;&nbsp;조회수 10</span>
             <td id="text_date">2020-05-29</td>
         </tr>
