조현주-메인화면완성(푸터제외)

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,14 +20,14 @@
     </div>
     <ul class="nav-links">
       <ul class="login-links">
-        <li><a onclick="location.href='mypage.uo'" id="mypage">MyPage</a></li>
-        <li><a onclick="location.href='login.uo'" id="login" id="login">LogIn</a></li>
+        <li><a onclick="location.href='User/mypage.uo'" id="mypage">MyPage</a></li>
+        <li><a onclick="location.href='User/login.uo'" id="login" id="login">LogIn</a></li>
       </ul>
       <li><a onclick="location.href='#.po'">SiteCommand</a></li>
-      <li><a onclick="location.href='FreeBoardList.po'">FreeBoard</a></li>
-      <li><a onclick="location.href='tipBoardList.po'">tipBoard</a></li>
-      <li><a onclick="location.href='#.po'">Ranking</a></li>
-      <li><a onclick="location.href='noticeBoardList.po'">Notice</a></li>
+      <li><a onclick="location.href='Board/freeBoardList.po'">FreeBoard</a></li>
+      <li><a onclick="location.href='Board/tipBoardList.po'">tipBoard</a></li>
+      <li><a onclick="location.href='User/userRank.uo'">Ranking</a></li>
+      <li><a onclick="location.href='Board/noticeBoardList.po'">Notice</a></li>
     </ul>
   </nav>
 
