조현주-공용헤드완성

--- a/WebContent/header.html
+++ b/WebContent/header.html
@@ -17,17 +17,25 @@
       <div class="line"></div>
       <div class="line"></div>
     </div>
-    <ul class="nav-links">
-      <ul class="login-links">
-        <li><a onclick="location.href='mypage.uo'" id="mypage">MyPage</a></li>
-        <li><a onclick="location.href='login.uo'" id="login" id="login">LogIn</a></li>
-      </ul>
-      <li><a onclick="location.href='#.po'">SiteCommand</a></li>
-      <li><a onclick="location.href='FreeBoardList.po'">FreeBoard</a></li>
-      <li><a onclick="location.href='tipBoardList.po'">tipBoard</a></li>
-      <li><a onclick="location.href='#.po'">Ranking</a></li>
-      <li><a onclick="location.href='noticeBoardList.po'">Notice</a></li>
+
+    <div class="logotext">  
+      <h4>SYSOUT</h4>
+    </div>
+
+    <ul class="login-links">
+      <li><a onclick="location.href='User/mypage.uo'" id="mypage">MyPage</a></li>
+      <div class="sline"></div>
+      <li><a onclick="location.href='User/login.uo'" id="login" id="login">LogIn</a></li>
     </ul>
+    
+    <ul class="nav-links">
+      <li><a onclick="location.href='#.po'">SITELINK</a></li>
+      <li><a onclick="location.href='Board/freeBoardList.po'">FREEBOARD</a></li>
+      <li><a onclick="location.href='Board/tipBoardList.po'">TIPBOARD</a></li>
+      <li><a onclick="location.href='User/userRank.uo'">RANK</a></li>
+      <li><a onclick="location.href='Board/noticeBoardList.po'">NOTICE</a></li>
+    </ul>
+    
   </nav>
 
   <script src="JS/header.js"></script>
