조현주-footer완성본

--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/footer_white.css" />
+    <link rel="stylesheet" href="CSS/footer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -13,59 +13,53 @@
 <body>
     <footer class="ft_white">
         <div class="ft_link">
-            <ul class="">
+            <ul class="ft_link-ul">
                 <li class="about">
-                    <a>ABOUT SYSOUT FROM MAXIM</a>
+                    <p>ABOUT SYSOUT FROM MAXIM</p>
                 </li>
-                <li>
-                    <i class="fab fa-instagram"></i>
-                </li>
-                <li>
-                    <i class="fab fa-facebook-square"></i>
-                </li>
+                <p class="snsicon">
+                    <i class="fab fa-instagram fa-3x"></i>
+                    <i class="fab fa-facebook-square fa-3x"></i>
+                </p>
             </ul>
-            <div class="">
-                <dt>문의전화</dt>
-                <dd>
+
+            <div class="div-call">
+                <p class="call">문의전화</p>
+                <p class="callnumber">
                     <strong class="tel">1588-5890</strong>
-                    (평일 09:00 ~ 18:00)
-                </dd>
-                <dd>
+                    <a class="teltime">(평일 09:00 ~ 18:00)</a>
+                </p>
+                <p class="ars">
                     <span>
                         <i class="fas fa-phone-volume"></i>
-                        <a class="ico_ars" href="#">ARS 안내</a>
+                        <a class="ico_ars">ARS 안내</a>
                     </span>
-                </dd>
+                </p>
             </div>
             <div class="logo">
                 <img>
-                SYSOUT
-                SONSORED BY KOREAIT
+                <p>SYSOUT</p>
+                <p>SONSORED BY KOREAIT</p>
             </div>
         </div>
+        <hr>
         <div class="ft_info">
-            <ul class="ul_info">
-                <li>
-                    <a href="#">이용약관</a>
-                </li>
-                <li>
-                    <a href="#"><Strong>개인정보처리방침</Strong></a>
-                </li>
-                <li>
-                    <a href="#">광고문의</a>
-                </li>
-            </ul>
+            <a href="#">이용약관</a>
+            <a href="#"><Strong>개인정보처리방침</Strong></a>
+            <a href="#">광고문의</a>
         </div>
-        <div class="ft_addr">
-            <div class="inn">
-                <dt class="si">사이트정보</dt>
-                <dd>(주)코리아아이티</dd>
-                <dd>서울특별시 강남구 테헤란로 146 (역삼동)</dd>
-                <dd>대표자 : 이강혁</dd>
-                <dd>사업자등록번호 : 123-12-12345</dd>
-                <dd>개인정보보호책임자 : 이예지</dd>
-                <dd>문의전화 : 1588-5890</dd>
-            </div>
+        <hr>
+        <div class="ft_addr1">
+            <a>(주)코리아아이티</a>
+            <a>서울특별시 강남구 테헤란로 146 (역삼동)</a>
+            <a>대표자 : 이강혁</a>
+        </div>
+        <div class="ft_addr2">
+            <a>사업자등록번호 : 123-12-12345</a>
+            <a>개인정보보호책임자 : 이예지</a>
+            <a>문의전화 : 1588-5890</a>
+        </div>
+        <div class="ft_addr3">
             <p class="copy">© 2020 MAXIM KOREAIT ACADEMY. ALL RIGHTS RESERVED</p>
         </div>
     </footer>
