--- a/WebContent/User/log.html
+++ b/WebContent/User/log.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/test.css" />
+    <link rel="stylesheet" href="CSS/log.css" />
     <title>Login</title>
   </head>
   <body>
