--- a/WebContent/User/log.html
+++ b/WebContent/User/log.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="CSS/log.css" />
+    <link rel="stylesheet" href="../CSS/log.css" />
     <title>Login</title>
   </head>
   <body>
     <form action="" class="form">
       <h1>Login</h1>
-      <input type="text" placeholder="Username" class="input" />
+      <input type="email" placeholder="UserEmail" class="input" />
       <input type="password" placeholder="Password" class="input" />
-      <input type="submit" value="Login" class="btn" />
+      <input type="submit" value="Login" class="btn-login" />
     </form>
+    <div class="yet">
+        <h3>아직 회원이 아니신가요?</h3>
+        <input type="submit" value="JoinUs" class="btn-yet" />
+    </div>
   </body>
 </html>
