공지사항 게시판

--- a/WebContent/Board/notice_content.html
+++ b/WebContent/Board/notice_content.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>공지사항</h2>
+    <h2 style="width: 85%; margin: 10px auto;">공지사항</h2>
 
     <div id="content">
         <span id="notice_title">
