조현주 - 공지사항 수정

--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <div class="logo">
-                <img>
+                <img src="../image/logo.png">
                 <p>SYSOUT</p>
                 <p>SONSORED BY KOREAIT</p>
             </div>
