조현주-헤더수정

--- a/WebContent/header.html
+++ b/WebContent/header.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="CSS/header.css" />
-  <title>Bubble Effect</title>
+  <title>Header</title>
 </head>
 
 <body>
@@ -17,11 +17,7 @@
       <div class="line"></div>
       <div class="line"></div>
     </div>
-
-    <div class="logotext">  
-      <h4>SYSOUT</h4>
-    </div>
-
+    
     <ul class="login-links">
       <li><a onclick="location.href='User/mypage.uo'" id="mypage">MyPage</a></li>
       <div class="sline"></div>
