--- a/WebContent/Board/borad.html
+++ b/WebContent/Board/borad.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../JS/board.js" type="text/javascript"></script>
+    <script src="../JS/freeBoard.js" type="text/javascript"></script>
     <link href="../CSS/board.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     <script src="https://use.fontawesome.com/afbd8941a0.js"></script>
