--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"content="width=device-width",initial-scale="1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
-	<title>BootstrapTest</title>
+	<title>hello sysout!</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/site.css">
